# resqstats

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py  build_dashboard.py  index.html  requirements.txt
data/: resqstats.duckdb
docs/: resqstats_build_plan.md
docs/decisions/: 0001-simulator-over-scraping.md
enrichment/: llm_classify.py  prompts.py  silver_builder.py
enrichment/eval/: predictions.csv  results.md
orchestration/dags/: alert_utils.py  resqstats_daily.py
producers/: karachi_data.py  simulator.py
producers/schemas/: events.py
streaming/: bronze_sink.py  schema_map.py
tests/: test_bronze_schema.py  test_llm_classify.py  test_simulator.py
transform/: dbt_project.yml  profiles.yml
transform/models/: schema.yml
transform/models/marts/: fct_incidents.sql  mart_coverage_gaps.sql  mart_golden_hour.sql  mart_response_by_town.sql  mart_station_hourly.sql
transform/models/staging/: stg_incidents.sql
